--- a/matheus-lima/src/Components/Container/Container.css
+++ b/matheus-lima/src/Components/Container/Container.css
@@ -7,6 +7,8 @@
     justify-content: center;
     align-items: center;
     padding-bottom: 40px;
+    gap: 50px;
+   
 }
 
 @keyframes neon-light {
