--- a/matheus-lima/src/Components/Header/Header.css
+++ b/matheus-lima/src/Components/Header/Header.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: row;
    /* box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px -1px, rgba(0, 0, 0, 0.14) 0px 4px 5px 0px, rgba(0, 0, 0, 0.12) 0px 1px 10px 0px;*/
-   background-color: black;
+   background-color:#0A0A0A;
     position: absolute;
     align-items: center;
     justify-content: space-around;
