--- a/matheus-lima/src/Components/Header/Header.css
+++ b/matheus-lima/src/Components/Header/Header.css
@@ -2,6 +2,71 @@
     font-family:'Montserrat';
     src: url('/src/assets/fonts/Montserrat/Montserrat-VariableFont_wght.ttf');
 }
+
+
+@media (max-width: 768px) {
+    .nav-bar {
+        display: flex;
+        flex-direction: column;
+       /* box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px -1px, rgba(0, 0, 0, 0.14) 0px 4px 5px 0px, rgba(0, 0, 0, 0.12) 0px 1px 10px 0px;*/
+       background-color:#0A0A0A;
+        position: absolute;
+        align-items: center;
+        justify-content: center;
+        top: 10px;
+        left: 10px;
+        right: 0;
+        /* height: 60px; Altura do header */
+        z-index: 100; /* Garante que o header esteja acima do container */
+        border: 2px solid white;
+        width: 40%;
+        /* padding: 20px; */
+        height: 250px;
+    }
+    
+
+    /* Remover estilos padrão do <ul> */
+ul {
+    list-style: none; /* Remove os marcadores de lista */
+    padding: 0; /* Remove o padding padrão */
+    margin: 0; /* Remove a margem padrão */
+    display: flex; /* Coloca os itens <li> em linha */
+    flex-direction: column;
+    justify-content: space-around; /* Distribui os itens horizontalmente */
+    width: 100%;
+    gap: 30px;
+}
+
+/* Estilo dos itens <li> */
+li {
+    /* margin-right: 20px; Espaço entre os itens, ajuste conforme necessário */
+    font-size: 1rem; 
+    font-family: 'Montserrat';
+}
+
+/* Estilo dos links dentro dos itens da lista */
+a {
+    text-decoration: none; /* Remove o sublinhado dos links */
+    color: white; /* Cor dos links */
+    font-weight: bold; /* Deixa o texto em negrito */
+}
+
+/* Efeito ao passar o mouse sobre os links */
+a:hover {
+    color:#2C1D80; /* Cor ao passar o mouse */
+}
+
+.textHeader{
+    font-size: 15px;
+}
+
+    
+  
+}
+
+@media (min-width: 769px) {
+
+
 /* Estilo da barra de navegação */
 .nav-bar {
     display: flex;
@@ -19,28 +84,10 @@
   
 }
 
-/* Animação de luz neon */
-@keyframes neon-light {
-    0% {
-      background-position: 0% 50%;
-    }
-    100% {
-      background-position: 100% 50%;
-    }
-}
 
-/* Linha de navegação com efeito neon */
-.glowing-line {
-    width: 100%;
-    height: 10vh;
-    background: linear-gradient(90deg, rgba(0, 255, 255, 0.2) 25%, rgba(0, 255, 255, 0.7) 50%, rgba(0, 255, 255, 0.2) 75%);
-    background-size: 200% 100%;
-    animation: neon-light 2s infinite linear;
-    border-radius: 2px;
-    display: flex;
-    align-items: center; /* Alinha os itens verticalmente no centro */
-    justify-content: center; /* Centraliza os itens horizontalmente */
-}
+
+
+
 
 /* Remover estilos padrão do <ul> */
 ul {
@@ -74,4 +121,5 @@ a:hover {
 
 .textHeader{
     font-size: 15px;
+}
 }
