--- a/matheus-lima/src/Components/ImageContainer/ImageContainer.css
+++ b/matheus-lima/src/Components/ImageContainer/ImageContainer.css
@@ -1,3 +1,13 @@
+
+@media (max-width: 768px) {
+    .image-con{
+        height:  200px;
+        width: 30%;
+    border: 2px solid white;
+    background-color: gray;
+    }
+}
+
 .image-con{
     height:  415px;
     width: 277px;
