--- a/matheus-lima/src/Components/Container/Container.css
+++ b/matheus-lima/src/Components/Container/Container.css
@@ -1,3 +1,24 @@
+@media (max-width: 768px) {
+  .ContainerBackground{
+    flex-direction: column;
+    margin-top: 0;
+   
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh; /* Faz o contêiner ocupar a altura total da tela */
+  position: absolute;
+  }
+  .sectionAbout{
+    flex-direction: column;
+    align-items: center;
+    width: 40%;
+    border: 2px solid red;
+    text-align: center;
+    justify-content:center ;
+    position: none;
+  }
+}
 
 .sectionText{
   width:704px;
