--- a/matheus-lima/src/Pages/Home.css
+++ b/matheus-lima/src/Pages/Home.css
@@ -6,6 +6,12 @@
     font-family: 'Roboto';
     src: url('/src/assets/fonts/Roboto/Roboto-Regular.ttf');
 }
+
+@media (max-width: 768px) {
+    .text-about{
+        font-size: 15px;
+    }
+}
 h1{
     font-size: 25px;
     color: white;
@@ -18,6 +24,7 @@ h1{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    background-color: white;
 }
 .text-footer{
     font-size: 14px;
