fazendo responsivo projetos

--- a/matheus-lima/src/Components/ContainerProjects/ContainerProjects.css
+++ b/matheus-lima/src/Components/ContainerProjects/ContainerProjects.css
@@ -6,3 +6,15 @@
    width:486px;
    height:347px;
 }
+
+
+@media (max-width: 768px) {
+   .img{
+      width:80%;
+      height:300px;
+   }
+
+   .divText{
+      width: 80%;
+   }
+}
