--- a/matheus-lima/src/Components/Container/Container.css
+++ b/matheus-lima/src/Components/Container/Container.css
@@ -12,11 +12,12 @@
   .sectionAbout{
     flex-direction: column;
     align-items: center;
-    width: 40%;
-    border: 2px solid red;
+    /* width: 40%; */
     text-align: center;
     justify-content:center ;
     position: none;
+    width: 80%;
+    padding: 0px;
   }
 }
 
