--- a/matheus-lima/src/Components/ImageContainer/ImageContainer.css
+++ b/matheus-lima/src/Components/ImageContainer/ImageContainer.css
@@ -1,18 +1,10 @@
 
-@media (max-width: 768px) {
-    .image-con{
-        height:  200px;
-        width: 30%;
-    border: 2px solid white;
-    background-color: gray;
-    }
-}
 
 .image-con{
     height:  415px;
     width: 277px;
-border: 2px solid white;
-background-color: gray;
+    border: 2px solid white;
+    background-color: gray;
 }
 
 .image-pro{
@@ -23,4 +15,16 @@ background-color: gray;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+@media (max-width: 768px) {
+   
+.image-pro{
+    height: 600px;
+    width: 80%;
+    background-color: #1A1A1A;
+    border: 1px solid yellow;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 }
