--- a/matheus-lima/src/Components/Title/Title.css
+++ b/matheus-lima/src/Components/Title/Title.css
@@ -32,3 +32,14 @@
 .title, .subtitle {
     margin: 0; /* Reseta margens padrão */
 }
+
+
+@media (max-width: 768px) {
+    
+    .title{
+       
+        font-size:30px;
+       
+    }
+        
+}
