--- a/matheus-lima/src/Components/Container/Container.css
+++ b/matheus-lima/src/Components/Container/Container.css
@@ -7,7 +7,7 @@
   left: 0;
   width: 100%;
   height: 100vh; /* Faz o contêiner ocupar a altura total da tela */
-  position: absolute;
+  /* position: absolute; */
   }
   .sectionAbout{
     flex-direction: column;
@@ -15,7 +15,7 @@
     /* width: 40%; */
     text-align: center;
     justify-content:center ;
-    position: none;
+    /* position: none; */
     width: 80%;
     padding: 0px;
   }
