--- a/matheus-lima/src/index.css
+++ b/matheus-lima/src/index.css
@@ -2,7 +2,8 @@ html, body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  height: 100%;
+  overflow-y: auto;
+  height: auto;
 }
 body {
   margin: 0;
