--- a/matheus-lima/src/index.css
+++ b/matheus-lima/src/index.css
@@ -6,7 +6,7 @@ html, body {
   height: auto;
 }
 body {
-  margin: 0;
+  margin-top: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
