--- a/matheus-lima/src/Components/Header/Header.css
+++ b/matheus-lima/src/Components/Header/Header.css
@@ -52,16 +52,17 @@
     .div-content {
         display: flex;
         flex-direction: row;
-        border: 2px solid red;
+        /* border: 2px solid red; */
         left: 0;
         right: 0;
         height: 250px;
         /* transition: left 0.3s ease; */
         align-items: center;
-        /* justify-content: center; */
+        /* justify-content: left; */
         top: 10px;
         width: 100%;
         height: 100%;
+
     }
 
     .ul {
